# NativeWinAppFramework

./: .gitignore  .gitmodules  CMakeLists.txt
artifacts/: cpp_native_win_app.lib  test_window_style.ilk
include/NativeWinApp/: FileDialog.h  Image.h  Keyboard.h  Mouse.h  Resource.h  ResourceHandle.h  Utility.h  Vulkan.h  Window.h  WindowEvent.h
scripts/: package.py
src/: FileDialog.cpp  Image.cpp  Keyboard.cpp  Mouse.cpp  Resource.cpp  Utility.cpp  Vulkan.cpp  WinVulkan.h  Window.Vulkan.cpp  Window.WndProc.cpp  Window.cpp
src/Glad/: Gl.cpp
src/NativeWinApp/: FileDialog.cpp  Keyboard.cpp  Mouse.cpp  Resource.cpp  Window.WndProc.cpp  Window.cpp
test/: CMakeLists.txt  TestWindowOpenGL.cpp  TestWindowStyle.cpp
test/TestWindowOpenGL/glad/: gl.cpp
test/TestWindowVulkan/: Main.cpp  frag.h  shader.frag.h  shader.frag.spv  shader.vert.h  shader.vert.spv  vert.h
